[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
uart_16550 = "0.3.0"
volatile = "0.2.6"
x86_64 = "0.15.1"

[package.metadata.bootimage]
test-args = [
    # For test executables, pass this param to QEMU to allow exiting it through writing
    # a success or failure codes to an IO port on given address with given size in bytes
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    # To print output from serial port to console of the host
     "-serial", "stdio",
     "-display", "none"
]
# QEMU exit code to map to success (0) exit code for test runs
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)

# Do not use any test harness for should_panic test (since we can have only one test scenario)
[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
